--- a/www/index.html
+++ b/www/index.html
@@ -3,5 +3,6 @@
 	<body>
 		<h1>This is a test</h1>
 		<img src="image.png"/>
+		<img src='http://www.google.com/images/branding/googlelogo/1x/googlelogo_light_color_272x92dp.png'/>
 	</body>
 </html>
